--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.0.7-preview",
+  "version": "4.0.7",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.searcher.git",
-    "revision": "73797822c3766699759a0e7fb7a49bc32ec09f47"
+    "revision": "0ca706ae8ac90d021c96e64e839e3bfe84c1f42e"
   },
   "samples": [
     {
