--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.0.8-preview",
+  "version": "4.0.9",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.searcher.git",
-    "revision": "d9fc000e200888106a68c73037cad713a332c0e9"
+    "revision": "ec1fb56f8d8f95b1503ea22a73b83e2cfb02f083"
   },
   "samples": [
     {
