--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.0.9",
+  "version": "4.1.0-preview",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
@@ -9,9 +9,10 @@
     "searcher"
   ],
   "repository": {
+    "footprint": "9b4e4a5e121c5c5ace6049fa4e6422cf4baedbd8",
     "type": "git",
-    "url": "git@github.cds.internal.unity3d.com:unity/com.unity.searcher.git",
-    "revision": "ec1fb56f8d8f95b1503ea22a73b83e2cfb02f083"
+    "url": "https://github.cds.internal.unity3d.com/unity/com.unity.searcher.git",
+    "revision": "fa8f551b5cd5153fb87b4a9ac3d1eec0ddb95219"
   },
   "samples": [
     {
