--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
     "search",
     "searcher"
   ],
+  "upmCi": {
+    "footprint": "e4a2e17b4939a7a20302b0cb52bacc3f90b290d5"
+  },
   "repository": {
-    "footprint": "9b4e4a5e121c5c5ace6049fa4e6422cf4baedbd8",
     "type": "git",
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.searcher.git",
-    "revision": "888c97d85a140ffedfc7f88d9433598912d2ddfc"
+    "revision": "921c2487a824d2a1fe3300ceba1acb87ab91a9d7"
   },
   "samples": [
     {
