--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.3.1",
+  "version": "4.6.0-preview",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
@@ -9,12 +9,12 @@
     "searcher"
   ],
   "upmCi": {
-    "footprint": "e8fa0a6cb19c5b22f76555eeb46b578d1db540bf"
+    "footprint": "c4ffb24c829f715e6d23147acf46a390a3d7b95c"
   },
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.searcher.git",
     "type": "git",
-    "revision": "56c3321cb776740e60e242e6c72cb5b4e8245256"
+    "revision": "5480cfbe92acf1b6b36bfe0d38a71591cef222dc"
   },
   "samples": [
     {
