com.unity.searcher@4.7.0-preview ## [4.7.0] - 2020-08-11 - Added Lucene.Net DLLs and first version of the LuceneDatabase
## [4.6.0] - 2020-07-27
- Added support for multi-select, enabled via MultiSelectEnabled in the SearcherAdapter.

--- a/Tests/Editor/Unity.Searcher.EditorTests.asmdef
+++ b/Tests/Editor/Unity.Searcher.EditorTests.asmdef
@@ -2,7 +2,11 @@
     "name": "Unity.Searcher.EditorTests",
     "references": [
         "Unity.Searcher.Editor",
-        "Unity.Searcher.EditorSamples"
+        "Unity.Searcher.EditorSamples",
+        "Lucene.Net"
+    ],
+    "precompiledReferences": [
+        "Lucene.Net.dll"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
