--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.7.0-preview",
+  "version": "4.9.1",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
@@ -9,12 +9,12 @@
     "searcher"
   ],
   "upmCi": {
-    "footprint": "961087986d2fd5883a5c1d0e48ff23c16a32a8de"
+    "footprint": "08d898b50177ce0d3685c0b023998a8d6dd55570"
   },
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.searcher.git",
     "type": "git",
-    "revision": "f81d118a10b04cfb8a45e8577fef2ea367d0ef48"
+    "revision": "9e68a2a9ba29bd6783bc91d15ff82bbd459f2163"
   },
   "samples": [
     {
