--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "com.unity.searcher",
   "displayName": "Searcher",
-  "version": "4.9.2",
+  "version": "4.9.3",
   "unity": "2019.1",
   "description": "General search window for use in the Editor. First target use is for GraphView node search.",
   "keywords": [
     "search",
     "searcher"
   ],
-  "upm": {
-    "changelog": "- Fixed a bug that stopped keyboard keys from affecting navigation and interaction with search results list, unless user explicitly focused/click on list using the mouse [1396759]"
+  "_upm": {
+    "changelog": "- Fixed a bug where spaces are removed when highlighted.\n- Changed VisualSplitter to twoPaneSplitView and updated indentation"
   },
   "upmCi": {
-    "footprint": "c003fc96927da2c24f950b99138713a642761fd1"
+    "footprint": "5b1ed6d260daf7b5a1f6f503b6d4e4e90d584762"
   },
+  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.searcher@4.9/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.searcher.git",
     "type": "git",
-    "revision": "7f9f75b04e97cf09c8ddc3968d059e74d6a2460a"
+    "revision": "6fad693b6604ae7175b59ebb4990d9a0b6c1d012"
   },
   "samples": [
     {
